# pkg/model/unstructured.go
@@ -11,8 +11,8 @@ type UnstructuredObj struct {
 	Version   string
 }
 
-// UnstructuredRequest doc
-type UnstructuredRequest struct {
+// UnstructuredCreateRequest doc
+type UnstructuredCreateRequest struct {
 	Namespace     string `json:"namespace" validate:"required"`
 	TemplateName  string `json:"templateName" validate:"required,min=2,max=50"`
 	CPURequest    string `json:"cpuRequest"`
@@ -21,4 +21,9 @@ type UnstructuredRequest struct {
 	MemoryLimit   string `json:"memoryLimit"`
 	CommandParams string `json:"commandParams" validate:"required"`
 	TestLabel     string `json:"testLabel"`
+}
+
+// UnstructuredDeleteRequest doc
+type UnstructuredDeleteRequest struct {
+	TestLabel string `json:"test_label" validate:"required"`
 }
